--- a/whyaxt.html
+++ b/whyaxt.html
@@ -202,7 +202,10 @@
     </ul>
   </div>
 </section>
-    <!-- 뒤로가기 버튼 -->
-  <button class="back-button" onclick="history.back()">← Go Back</button>
+      <!-- 이동 버튼 -->
+  <button class="back-button" onclick="window.location.href='https://yejilee0307.github.io/secondpage/secondpage.html'">
+    ← Go Back
+  </button>
+
 </body>
 </html>
